--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
       </div>
       <div class="profile-image">
-        <img src="Profile Picture.jpg?raw=true" alt="Portrait of Glory Phumelelo Letsale" class="profile-picture" />
+        <img src="Media.jfif" alt="Portrait of Glory Phumelelo Letsale" class="profile-picture" />
       </div>
     </section>
 
@@ -175,4 +175,5 @@
   });
 </script>
 </html>
+
 
