--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
       </div>
       <div class="profile-image">
-        <img src="Media.jfif" alt="Portrait of Glory Phumelelo Letsale" class="profile-picture" />
+        <img src="Media.jfif" alt="Portrait of Nombulelo Mahlangu" class="profile-picture" />
       </div>
     </section>
 
@@ -133,7 +133,7 @@
           <h2>Get in Touch</h2>
           <p>Feel free to reach out or drop a message below</p>
         </div>
-        <form action="https://formspree.io/f/mrbqkojr" method="POST">
+        <form action="https://formspree.io/f/xjkpnqlk" method="POST">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required />
           <label for="email">Email:</label>
@@ -152,7 +152,7 @@
       <a href="https://github.com/puleng064/Software_Dev_Project.git" target="_blank"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/calforniah-mnisi-155580250/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
-    <p>© 2025 Glory Letsale. All rights reserved.</p>
+    <p>© 2025 Nombulelo Mahlangu. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
@@ -175,5 +175,6 @@
   });
 </script>
 </html>
+
 
 
