--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
-       <li><a href="" target="_blank" rel="noopener noreferrer">Resume</a></li>
+       <li><a href="Nombulelo Mahlangu CV.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -175,6 +175,7 @@
   });
 </script>
 </html>
+
 
 
 
